--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,25 @@ body {
     font-family: monospace;
 }
 
+#menu {
+    width: 100vw;
+    height: 100vh;
+    background: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.anim {
+    margin: 15px;
+}
+
+input[type="range"] {
+    width: 200px;
+}
+
 #office {
     width: 100vw;
     height: 100vh;
@@ -15,5 +34,6 @@ body {
 }
 
 button {
-    font-size: 20px;
+    margin-top: 30px;
+    font-size: 18px;
 }
