--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     content: "";
     position: absolute;
     inset: 0;
-    background-image: url(../resources/images/officeImage.jpg);
+    background-image: url();
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
