--- a/css/style.css
+++ b/css/style.css
@@ -8,24 +8,57 @@ body {
 #animatronicImage {
     width: 100px;
     height: 100px;
+    display: inline-block;
+}
+
+.animatronics {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.animatronicButtons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.animatronicCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.bottomButtons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transform:translateY(800px);
+}
+
+.bottomButton {
+    width: 300px;
+    height: 30px;
+    background-color: brown;
+    border: none;
+    border-radius: 5px;
 }
 
 #office {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+    background-color: black;
 }
 
-#office::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: -1;
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 #leftDoor {
